# paqm-python

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
paqm/: loudness.py  masker.py  paqm.py  spectrum.py  transfer.py
paqm/utils/: __init__.py  dataset.py
src/paqm/: __init__.py  loudness.py  masker.py  paqm.py
src/paqm/utils/: dataset.py  general.py
src/torchpaqm/: transfer.py
src/torchpaqm/utils/: __init__.py
tests/: test_cumulative_error.py  test_loudness.py  test_masker.py  test_paqm.py  test_spectrum.py  test_training.py  test_transfer.py  test_utils.py
tests/fixtures/: bark2hertz.mat  cmpLoudness.mat  cumulative-test.mat  hertz2bark.mat  masker.mat  paqm-audio.mat  paqm-same-wgn.mat  stft-simple.pt  tfOuter2Inner.mat
tests/fixtures/matlab/: barkSpectrum.mat  cumulative-test.mat  masker.mat  paqm-audio.mat  paqm-same-wgn.mat
