[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-paqm"
version = "0.0.1"
authors = [
  { name="Bernardo Vieira de Miranda", email="bvm810@gmail.com" },
]
description = "Implementation of PAQM in Python using pytorch for vectorized operations."
readme = "README.md"
requires-python = ">3.10.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Environment :: GPU :: NVIDIA CUDA",
    "Framework :: Pytest"
]

[project.urls]
Homepage = "https://github.com/bvm810/torch-paqm"
Issues = "https://github.com/bvm810/torch-paqm/issues"